Fix chart legend on tablet-desktop breakpoint

--- a/plugins/main/public/components/common/charts/visualizations/legend.scss
+++ b/plugins/main/public/components/common/charts/visualizations/legend.scss
@@ -2,7 +2,7 @@
   width: 60vw;
   overflow: auto;
   scrollbar-width: none;
-  @media (min-width: 768px) {
+  @media (min-width: 1024px) {
     width: 150px;
   }
 }
